fix(components/Header): disable events when user data is not visible

--- a/src/components/scss/Header.scss
+++ b/src/components/scss/Header.scss
@@ -76,6 +76,7 @@
     text-transform: capitalize;
     transition: all .3s ease;
     z-index: -1;
+    pointer-events: none;
 
     * {
       color: var(--primary-bg-color);
